Acerca de terminado y sonidos

--- a/app/src/main/assets/acercade.html
+++ b/app/src/main/assets/acercade.html
@@ -9,11 +9,17 @@
 <h2>Música</h2>
 <ul>
     <li>Música de fondo: "m4rt3z - Staring At Infinity" de <b>m4rt3z</b>. Licencia: <a href="http://creativecommons.org/licenses/by-nd/3.0/legalcode">CC Attribution-NoDerivs 3.0</a></li>
+    <li>Efectos de <a href="http://kenney.nl/">Kenney</a></li>
+    <li>Efecto de Sound Explorer descargado de <a href="http://soundbible.com/1986-Bomb-Exploding.html">SoundBible</a></li>
 </ul>
 <h2>Imágenes</h2>
 <ul>
     <li>Imagenes de <a href="http://kenney.nl/">Kenney</a></li>
     <li>Imagen principal de Rawdanitsu en la pagina <a href="http://opengameart.org/content/space-backgrounds-3">OpenGameArt</a></li>
+</ul>
+<h2>Fuente</h2>
+<ul>
+    <li>Fuente Xolonium descargada de <a href="http://openfontlibrary.org/font/xolonium">Open Font Library</a></li>
 </ul>
 </body>
 </html>
